syntax="proto3";
package pb;
option go_package="github.com/djsmk123/server/pb";
import "empty_request.proto";
import "rpc_get_user.proto";
import "rpc_login.proto";
import "rpc_signup.proto";
import "rpc_users.proto";
import "rpc_notifications.proto";
import "rpc_chat.proto";
service GrpcServerService {
    rpc SignUp(SignupRequestMessage) returns (SignupResponseMessage){};

    rpc login(LoginRequestMessage) returns (LoginResponseMessage){};
    rpc GetUser(EmptyRequest) returns (GetUserResponse) {};

    rpc GetUsers(UsersListRequest) returns (ListUserMessage) {};

    rpc GetNotifications(EmptyRequest) returns (stream NotificationMessage){}
    rpc SendMessage(stream SendMessageRequest) returns (stream Message){};
    rpc GetAllMessage(GetAllMessagesRequest) returns (GetAllMessagesResponse){};
}


